--- a/并查集.md
+++ b/并查集.md
@@ -295,10 +295,56 @@ public:
 };
 ```
 
-C++标准库中有部分排序可以使用，有的时候我们需要找到最大的三个数或者最小的几个数,使用部分排序算法就可以解决
+C++标准库中有部分排序可以使用，有的时候我们需要找到最大的三个数或者最小的几个数,使用部分排序算法就可以解决,反向迭代器为什么使用由大到小的顺序排序，因为由大到小表示的是反向的由大到小，顺着来看仍然是由小到大
 
 ```C++
 std::partial_sort(nums.begin(),nums.begin()+3,nums.end());//找到最小的三个数
 std::partial_sort(nums.rbegin(),num.rbegin()+3;,nums.rend(),std::greater<int>());//找到最大的三个数
+```
+
+## 1489 找到最小生成树里的关键边和伪关键边
+
+带权无向连通图,找到所有的最小生成树，其中所有最小生成树共有的边称为关键边,不是所有边公有的边称为非关键边。
+
+依据题意，此处我们定义标准权重和，先生成一个最小生成树。已经存在的边如果是关键边，将这个边去掉，将有两种可能，一种是仍然能够生成最小树，但是由于是关键边，因此如果去掉这条边，所生成的最小生成树一定比标准权重和大，另一种是缺少这一条边将不能将所有的节点相连。如果这条边不是关键边，则有可能是非关键边，非关键边将这条边去掉仍然能够生成最小生成树，并且权重之和与标准权重和相等。
+
+此方法会多次使用Cluskal算法，因此对并查集按秩定义根节点可以有效减少查询时间
+
+```c++
+class Djset{
+    Djset(int n){
+        parent.resize(n,0);
+        rank.resize(n,1);
+        for(int i=0;i<n;i++){
+            parent[i] = i;
+        }
+    }
+  	int find(int x){
+        if(parent[x]==x)
+            return x;
+        else
+            return find(parent[x]);
+    }  
+    bool merge(int x,int y){
+        int parent_x = find(x);
+        int parent_y = find(y);
+        if(parent_x ==parent_y)
+            return true;
+        count++;
+        if(rank[parent_x]<=rank[parent_y]){
+            parent[parent_x] = parent_y;
+        }else{
+            parent[parent_y] = parent_x;
+        }
+        if(rank[parent_x] == rank[parent_y])
+            rank[parent_y] +=1;
+        return false;
+    }
+	private:
+    	vector<int> parent;
+    	vector<int> rank;
+    public:
+    	int count = 0;
+};
 ```
 
