--- a/c++/面试突击.md
+++ b/c++/面试突击.md
@@ -58,17 +58,91 @@
       print("hello")
       ```
 
-    - const引用会创建一个对象，再将左值引用绑定上去
+    - const引用会创建一个对象，再将左值引用绑定上去,左值不需要拷贝对象，右值则需要创建一个新的对象
 
   - C++ 11标准添加了右值引用，这种引用只能绑定右值，不能绑定左值
 
     - ```
-      int &&i=42
+      int &&i=42 //其中i是一个左值！！！
       int j = 42
       int &&k = j //error
       ```
 
     - 符号区别于左值引用，所以可以与左值引用一起用于函数重载
+
+- 移动语义
+
+  - ```
+    //函数1：接受左值引用
+    void process_copy(const vector<int>& vec_ ){
+        cout<<"left ref"<<endl;
+        std::vector<int> vec(vec_);  
+        vec.push_back(42);
+    }
+    
+    //函数2：接受右值引用
+    void process_copy(vector<int>&&vec){
+        cout<<"right_ref"<<endl;
+        vec.push_back(42);
+    }
+    
+    int main(){
+        vector<int> data;
+        process_copy(data);
+        process_copy(vector<int>()); //执行函数2：不需要进行拷贝
+        return 0;
+    }
+    ```
+
+- 移动构造函数
+
+  - ```c++
+    class person{
+    private:
+        int *data;
+    public:
+        person():data(new int[10000]){}
+        ~person(){delete []data;}
+        //拷贝构造函数、也是可以接受右值的哦，因为是常量引用！！！，但是如果传递是右值，那么会进行一次拷贝...
+        person(const person& other):data(new int[10000]){
+            std::copy(other.data,other.data+10000,data);   
+        }
+    };
+    
+    void func(person p){
+        //do_something
+    }
+    
+    int main(){
+        person p;
+        func(p);//调用func函数时会调用拷贝构造函数
+        return 0;
+    }
+    ```
+
+  - ```c++
+    class person{
+    private:
+        int *data;
+    public:
+        person():data(new int[10000]){}
+        ~person(){delete []data;}
+        //拷贝构造函数
+        person(const person& other):data(new int[10000]){
+            std::copy(other.data,other.data+10000,data);   
+        }
+        //移动构造函数
+        person(person&& other):data(other.data){
+            other.data=nullptr; //原指针设置为空指针，方便回收
+        }
+    };
+    ```
+
+    
+
+
+
+
 
 
 
